[gd_scene load_steps=21 format=3 uid="uid://cve4y2nbbwucg"]

[ext_resource type="Script" path="res://MainGui.gd" id="1_cmbg4"]
[ext_resource type="Texture2D" uid="uid://ui7y4aq56qpg" path="res://Assets/Boss1.png" id="2_1i3ah"]
[ext_resource type="Texture2D" uid="uid://cx8a03jh8vpo2" path="res://Assets/Boot.png" id="3_i12ml"]
[ext_resource type="FontFile" uid="uid://bk36iunqbewli" path="res://Themes/nulshock bd.otf" id="4_mfnqb"]
[ext_resource type="Texture2D" uid="uid://fd3t18ylbg2a" path="res://Assets/arrow.png" id="5_6pbbk"]
[ext_resource type="Texture2D" uid="uid://dodutmihl1csn" path="res://Assets/item_sword.png" id="6_cgnfx"]
[ext_resource type="Texture2D" uid="uid://bqk53ub4xnocc" path="res://Assets/range.png" id="7_oof0c"]
[ext_resource type="Texture2D" uid="uid://bq0412hu76135" path="res://Assets/Shield.png" id="8_gqmkm"]
[ext_resource type="PackedScene" uid="uid://c82hspet5gfvc" path="res://collection_panel.tscn" id="11_8rs5d"]
[ext_resource type="PackedScene" uid="uid://ct2wj06r38iul" path="res://upgrade_panel.tscn" id="11_okctx"]
[ext_resource type="Texture2D" uid="uid://b1yd3r7k2ump0" path="res://Assets/blue_orb.png" id="11_w6csy"]
[ext_resource type="Texture2D" uid="uid://dc3pjsse52ru1" path="res://Assets/heart_white.png" id="12_7qj6u"]
[ext_resource type="PackedScene" uid="uid://b5r70vpa8c172" path="res://DeployPanel.tscn" id="13_k5m8x"]
[ext_resource type="Theme" uid="uid://d3xlkfucuimn7" path="res://Themes/MyTheme.tres" id="14_vlrxw"]

[sub_resource type="LabelSettings" id="LabelSettings_h8uai"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_a3oru"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_u5rlr"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_7dolo"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_7cbe8"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ufm1a"]
line_spacing = 2.0
font_size = 14
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MainGui" type="Node2D"]
position = Vector2(703.715, 549.559)
script = ExtResource("1_cmbg4")

[node name="EnemyContainer" type="Node2D" parent="."]
visible = false
position = Vector2(-698.897, -546.985)

[node name="GridContainer" type="GridContainer" parent="EnemyContainer"]
offset_left = 29.7255
offset_top = 288.913
offset_right = 209.725
offset_bottom = 428.913
theme_override_constants/h_separation = 90
theme_override_constants/v_separation = 35
columns = 3

[node name="Control" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="HealthSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_7qj6u")

[node name="HealthLabel" type="Label" parent="EnemyContainer/GridContainer/Control"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "888"
label_settings = SubResource("LabelSettings_h8uai")
vertical_alignment = 1

[node name="Control2" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="MovesSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control2"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_i12ml")

[node name="MovesLabel" type="Label" parent="EnemyContainer/GridContainer/Control2"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "88"
label_settings = SubResource("LabelSettings_a3oru")
vertical_alignment = 1

[node name="Control3" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="SpeedSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control3"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_6pbbk")

[node name="SpeedLabel" type="Label" parent="EnemyContainer/GridContainer/Control3"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "88"
label_settings = SubResource("LabelSettings_u5rlr")
vertical_alignment = 1

[node name="Control4" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="DamageSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control4"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_cgnfx")

[node name="DamageLabel" type="Label" parent="EnemyContainer/GridContainer/Control4"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "88"
label_settings = SubResource("LabelSettings_7dolo")
vertical_alignment = 1

[node name="Control5" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="RangeSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control5"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_oof0c")

[node name="RangeLabel" type="Label" parent="EnemyContainer/GridContainer/Control5"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "88"
label_settings = SubResource("LabelSettings_7cbe8")
vertical_alignment = 1

[node name="Control6" type="Control" parent="EnemyContainer/GridContainer"]
layout_mode = 2

[node name="ArmorSprite" type="Sprite2D" parent="EnemyContainer/GridContainer/Control6"]
position = Vector2(-16, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_gqmkm")

[node name="ArmorLabel" type="Label" parent="EnemyContainer/GridContainer/Control6"]
layout_mode = 0
offset_right = 34.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_mfnqb")
theme_override_font_sizes/font_size = 14
text = "88"
label_settings = SubResource("LabelSettings_h8uai")
vertical_alignment = 1

[node name="Description" type="Label" parent="EnemyContainer"]
offset_left = 279.562
offset_top = 1.91287
offset_right = 679.563
offset_bottom = 379.913
text = "Elctric Barrage:
Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit

Explosive Missles:
Deals 2 damage to every friendly unit in a 3x3 area centered on every friendly unit

Elctric Barrage:
Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit

Elctric Barrage:
Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit
"
label_settings = SubResource("LabelSettings_ufm1a")
autowrap_mode = 2

[node name="BossSprite" type="Sprite2D" parent="EnemyContainer"]
position = Vector2(129.545, 149.665)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1i3ah")

[node name="MapContainer" type="Node2D" parent="."]
visible = false
position = Vector2(-702.444, -66.4656)

[node name="Description" type="Label" parent="MapContainer"]
offset_left = 308.646
offset_top = 44.5826
offset_right = 708.646
offset_bottom = 244.583
text = "Elctric Barrage:
Deals 6 damage spread over every friendly unit in a 3x3 area centered on a random friendly unit

Explosive Missles:
Deals 2 damage to every friendly unit in a 3x3 area centered on every friendly unit
"
label_settings = SubResource("LabelSettings_ufm1a")
autowrap_mode = 2

[node name="MapSprite" type="Sprite2D" parent="MapContainer"]
position = Vector2(146.624, 150.107)
scale = Vector2(3, 3)
texture = ExtResource("11_w6csy")

[node name="SelectedContainer" parent="." instance=ExtResource("11_okctx")]
position = Vector2(4.81561, -155.347)

[node name="CollectionContainer" parent="." instance=ExtResource("11_8rs5d")]
position = Vector2(-639.666, -442.793)
scale = Vector2(1.5, 1.5)

[node name="DeployContainer" parent="." instance=ExtResource("13_k5m8x")]
position = Vector2(42.8556, 227.31)

[node name="StartMission" type="Button" parent="."]
offset_left = 522.353
offset_top = 160.142
offset_right = 722.353
offset_bottom = 260.142
theme = ExtResource("14_vlrxw")
theme_override_font_sizes/font_size = 20
text = "START
MISSION"
